--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
  
    <div class="main">
        <div class="top-section">
-           <img src="Images/Huda.jpeg.jpeg" class="profile" />
+           <img src="![github-small](https://user-images.githubusercontent.com/107329715/173224478-5b949478-26b2-4114-b979-60ef1d443c4b.jpg)
+" class="profile" />
            <p class="p1">Huda Yusuf</p>
           
        </div>
