--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
    <div class="main">
        <div class="top-section">
-           <img src="![github-small](https://user-images.githubusercontent.com/107329715/173224478-5b949478-26b2-4114-b979-60ef1d443c4b.jpg)
+           <img src="![hudapic](https://user-images.githubusercontent.com/107329715/173224868-3fd2cb2f-48d7-4329-8084-c5866a131ace.jpeg)
 " class="profile" />
            <p class="p1">Huda Yusuf</p>
           
