--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
  
    <div class="main">
        <div class="top-section">
-           <img src="Images/hudapic.jpeg"
-" class="profile" />
+           <img src="Images/hudapic.jpeg" class="profile" />
            <p class="p1">Huda Yusuf</p>
           
        </div>
